[package]
name = "cot"
version = "1.3.4"
edition = "2021"
license-file = "LICENSE"
description = "A CoT sensor publisher"
authors = ["Ross Newman <ross.newman@astutesys.com>"]
homepage = "https://www.astutesys.com"

[dependencies]
clap = "3.0"
ctrlc = "1.0"
embed-doc-image = "0.1.4"
cottak = "0.1.1"
