[package]
name = "common"
version = "0.2.4"
edition = "2021"
authors = ["Ross Newman <ross.newman@astutesys.com>"]
description = "A common library for shared functionality in HORAS 2.0"
license = "MIT"
repository = "https://github.com/your-repo/HORAS-2.0"

[build-dependencies]
prost-build = "0.13.4"
protobuf-codegen = "3"
protoc-rust = "^2.0"

[dependencies]
serde = "1.0.0"
serde_json = "1.0.140"
bincode = "2.0.1"
zenoh = "1.3.3"
protobuf = "3"
sysinfo = "0.35.0"
tokio = "1.0.0"

[lib]
name = "common"
path = "src/lib.rs"

[package.metadata.deb]
maintainer = "Ross Newman <ross.newman@astutesys.com>"
copyright = "2025Astute Systems PTY LTD"
license-file = ["LICENSE", "4"]
extended-description = """\
A set of keys for zenoh."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    [
        "minica.pem",
        "/etc/horas/minica.pem",
        "644",
    ],
    [
        "config.json",
        "/etc/horas/config.json",
        "644",
    ],
    [
        "config_peer.json",
        "/etc/horas/config_peer.json",
        "644",
    ],
    [
        "scripts/hr_peer_mode",
        "/usr/bin/hr_peer_mode",
        "755",
    ],
    [
        "scripts/hr_router_mode",
        "/usr/bin/hr_router_mode",
        "755",
    ],
    [
        "scripts/hr_service_stop_all",
        "/usr/bin/hr_service_stop_all",
        "755",
    ],
    [
        "scripts/hr_status",
        "/usr/bin/hr_status",
        "755",
    ],
    [
        "can0.service",
        "/lib/systemd/system/can0.service",
        "644",
    ],    
]