[package]
name = "zenoh_example_subscriber"
version = "0.2.0"
edition = "2021"
license-file = "LICENSE"
description = "A simple zenoh example in Rust"
authors = ["Ross Newman <ross.newman@adventatum.com>"]
homepage = "https://www.adventatum.com"

[dependencies]
common = { path = "../../../rust/common" }
gflags = "0.3.12"
zenoh = "1.3.3"
tokio = "1.0.0"
protobuf = "3"
chrono = "0.4.40"
